kubernetes/home/external/leaderboard/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: leaderboard-ingress
  namespace: external
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`leaderboard.old.oplabs.us`)
      kind: Rule
      middlewares:
        - name: default-headers
      services:
        - name: leaderboard
          port: 80
  tls:
    secretName: oplabs-us-tls
